# mcp

./: .cursorrules.md  .gitignore  CONTRIBUTING.md  Dockerfile  MCP_COMMANDS.md  README.md  SETUP.md  context.md  contextual.md  function_calls  mcp-server-enhanced-ssh  package-lock.json  package.json  pnpm-workspace.yaml  pyproject.toml  tree.md
.github/workflows/: ci.yml
cheets/: tmux.md
claudeapp-config/: claude_desktop_config.json
scripts/: commit.sh  generate_context.sh  git_summary.sh  list_models.sh  manage.sh  smart_tree.sh
src/: __init__.py
src/core/: __init__.py  context_store.py  tof_system.py  types.py  voice.py
src/core/personalities/: trisha.md
src/tools/: git_context_builder.py  git_context_visualizer.py  smart_tree.py
src/tools/gak/: index.js  package.json
src/tools/templates/: visualizer.html
tests/: conftest.py  test_imports.py  test_sse.py
tests/core/: test_tof_system.py
tests/tools/: test_git_context_builder.py
