[project]
name = "essential-mcp"
version = "0.1.0"
description = "Essential Model Context Protocol Implementation"
authors = [
    {name = "Hue and Aye", email = "hue@8b.is"}
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.1",
    "python-multipart>=0.0.9",
    "pydantic>=2.6.3",
    "qdrant-client>=1.7.3",
    "sentence-transformers>=2.5.1",
    "numpy>=1.26.4",
    "websockets>=12.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pytest>=8.0.2",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=4.1.0",
    "black>=24.2.0",
    "isort>=5.13.2",
    "mypy>=1.8.0",
    "flake8>=7.0.0",
    "rich>=13.7.0",
    "edge-tts>=6.1.9",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "sse-starlette>=1.6.1"
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]
markers = [
    "asyncio: mark test as async",
]

[tool.pytest.asyncio]
mode = "auto"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]

[tool.poetry]
name = "mcp"
version = "0.1.0"
description = "Model Context Protocol - A powerful tool for AI context management"
authors = ["Hue and Aye <hue@example.com>"]
packages = [
    { include = "mcp_atc", from = "packages/mcp-atc/src" },
]

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = ">=0.110.0"
uvicorn = ">=0.27.1"
websockets = ">=12.0"
sse-starlette = "^1.6.1"

[tool.poetry.scripts]
mcp-atc = "mcp_atc.main:main" 